--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -19109,6 +19109,59 @@
 "~^/GPT-x$" "/gpt-3";
 "~^/.*ð$" "/404";
 "~^/Complexity.*$" "/complexity";
+"~^/static/img/logo/index$" "/static/img/logo/index.html";
+"~^/Hydrocephalus&hash.*$" "/hydrocephalus";
+"~^/%E5%A4%8F%E9%99%BD%E7%82%8E/.*$" "/404";
+"~^/doc/statistics/decision/2006-drescher-goodandreal.pdf.K.*$" "/doc/statistics/decision/2006-drescher-goodandreal.pdf";
+"~^/doc/psy....chology/okcupid/them$" "/doc/psychology/okcupid/themathematicsofbeauty.html";
+"~^/doc/psychology/chess/2014-hambrick.pdfDeli.&$" "/doc/psychology/chess/2014-hambrick.pdf";
+"~^/doc/ps%C3%A2%E2%82%AC%C2%A6ffle\.pdf.*$" "/doc/psychology/2019-ruffle.pdf";
+"~^/doc/marketing/bcoin-logo.svg$" "/494";
+"~^/doc/iq/20212-bavelier\.pdf.*$" "/doc/iq/2012-bavelier.pdf";
+"~^/.*confidx.html.*$" "https://web.archive.org/web/20020223151806/http://iapac.org:80/confidx.html";
+"~^/doc/2011-gwern-yourmorals.org/mis_process.php_files/$" "/404";
+"~^/AB-testing/.*$" "/ab-testing";
+"~^/rtificial/apple/2010-kean\.pdf.*$" "/doc/genetics/selection/artificial/apple/2010-kean.pdf";
+"~^/cct$" "/index#domestic-cats";
+"~^/doc/obesity/2018-semaglutide-.*$" "/doc/longevity/glp/semaglutide/2018-pratley.pdf";
+"~^/illusion-of-depth$" "/doc/psychology/cognitive-bias/illusion-of-depth/index";
+"~^/doc/psychiatry/autism/2023-usdepartmentofst$" "/doc/psychiatry/autism/2023-usdepartmentofstate-byuunearsuicidefoiaresponse.pdf";
+"~^/doc/psychiatry/autism/2023-usdepartmentofstate$" "/doc/psychiatry/autism/2023-usdepartmentofstate-byuunearsuicidefoiaresponse.pdf";
+"~^/doc/economics/copyright/2015-heald.pdf%EF.*$" "/doc/economics/copyright/2015-heald.pdf";
+"~^/Wikipedia-resume.html$" "/wikipedia-resume";
+"~^/reinforcement-learning$" "/doc/reinforcement-learning/index";
+"~^/reenforcement-learning$" "/doc/reinforcement-learning/index";
+"~^/nootropic/zeo/ZMA$" "/zeo/zma";
+"~^/genetics.-Thank.*$" "/index#genetics";
+"~^/feeds/all.atom.xml$" "/feed.xml";
+"~^/doc/[b-z].*/eva/1996-newtype-anno-interview$" "/doc/anime/eva/1996-newtype-anno-interview";
+"~^/doc/psychology/animal/1931-kellogg.pdfThe-Ape-and-the-Child;-a-Study-of-Environmental-Influence-Upon-Early-Behavior/$" "";
+"~^/doc/psychiatry/autism/2023-usdepartmentofstste$" "/doc/psychiatry/autism/2023-usdepartmentofstate-byuunearsuicidefoiaresponse.pdf";
+"~^/doc/psychiatry/autism/2023-usdepartmentofstate-byuunearsui$" "/doc/psychiatry/autism/2023-usdepartmentofstate-byuunearsuicidefoiaresponse.pdf";
+"~^/doc/psychiatry/autism/2023-usdepartmentofstate-byuunearsuicid$" "/doc/psychiatry/autism/2023-usdepartmentofstate-byuunearsuicidefoiaresponse.pdf";
+"~^/doc/psychiatry/autism/2023-usdepartmentofstate-byuunearsuicide$" "/doc/psychiatry/autism/2023-usdepartmentofstate-byuunearsuicidefoiaresponse.pdf";
+"~^/doc/psychiatry/autism/2023-usdepartmentofstate-byuunearsuicidefoi$" "/doc/psychiatry/autism/2023-usdepartmentofstate-byuunearsuicidefoiaresponse.pdf";
+"~^/doc/psychiatry/autism/2023-usdepartmentofstate-byuunearsuicidefoiares$" "/doc/psychiatry/autism/2023-usdepartmentofstate-byuunearsuicidefoiaresponse.pdf";
+"~^/doc/psychiatry/autism/2023-usdepartmentofstate-byuunearsuicidefoia$" "/doc/psychiatry/autism/2023-usdepartmentofstate-byuunearsuicidefoiaresponse.pdf";
+"~^/doc/psychiatry/autism/2023-usdepartmentofstate-byuunear$" "/doc/psychiatry/autism/2023-usdepartmentofstate-byuunearsuicidefoiaresponse.pdf";
+"~^/doc/psychiatry/autism/2023-usdepartmentofstate-byuunea$" "/doc/psychiatry/autism/2023-usdepartmentofstate-byuunearsuicidefoiaresponse.pdf";
+"~^/doc/psychiatry/autism/2023-usdepartmentofstate-byuu$" "/doc/psychiatry/autism/2023-usdepartmentofstate-byuunearsuicidefoiaresponse.pdf";
+"~^/doc/psychiatry/autism/2023-usdepartmentofstate-byu$" "/doc/psychiatry/autism/2023-usdepartmentofstate-byuunearsuicidefoiaresponse.pdf";
+"~^/doc/psychiatry/autism/2023-usdepartment$" "/doc/psychiatry/autism/2023-usdepartmentofstate-byuunearsuicidefoiaresponse.pdf";
+"~^/doc/psychiatry/autism/2023-usdepart$" "/doc/psychiatry/autism/2023-usdepartmentofstate-byuunearsuicidefoiaresponse.pdf";
+"~^/doc/psychiatry/autism/2023-usdepa$" "/doc/psychiatry/autism/2023-usdepartmentofstate-byuunearsuicidefoiaresponse.pdf";
+"~^/doc/fx.*$" "/doc/index";
+"~^/doc/biology/booger/2001-andrade$" "/doc/biology/booger/2001-andrade.pdf";
+"~^/Death%252520Note%252520Ending.*$" "/death-note-ending";
+"~^/doc/melatonin/2014-boegers\.pdf.*$" "/doc/melatonin/2014-boergers.pdf";
+"~^/doc/psychiatry/autism/2023-usdepartmentofstate-byuunearsuicidefoiarespon$" "/doc/psychiatry/autism/2023-usdepartmentofstate-byuunearsuicidefoiaresponse.pdf";
+"~^/doc/psychiatry/auti$" "/doc/psychiatry/autism/index";
+"~^/doc/psychi$" "/doc/psychiatry/index";
+"~^/decision/1961-raiffa-appliedstatisticaldecisiontheory\.pdf.*$" "/doc/statistics/decision/1961-raiffa-appliedstatisticaldecisiontheory.pdf";
+"~^/doc/technology/2018-%C3%B0$" "/doc/technology/index";
+"~^/cha$" "/changelog";
+"~^/static/font/DeutscheSchrift.ttf$" "/static/font/blackletter/DeutscheSchrift.ttf";
+"~^/unsee$" "/unseeing";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
@@ -25434,6 +25487,27 @@
 "~^/.../1996$" "/index";
 "~^/18" "/index";
 "~^/0b.*$" "/404";
+"~^/tuning-consoles.*$" "/404";
+"~^/jersey-bola.*$" "/404";
+"~^/\$2016.*$" "/404";
+"~^//FCKeditor/.*$" "/404";
+"~^/forgot_password.*$" "/404";
+"~^/gallery_view.*$" "/404";
+"~^//manage/.*$" "/404";
+"~^/mail_logs.*$" "/404";
+"~^/lamp/.*$" "/404";
+"~^/js_editor.*$" "/404";
+"~^/html_editor.*$" "/404";
+"~^//Upfile_Photo.*$" "/404";
+"~^/t\.me%2F.*$" "/404";
+"~^//system/.*$" "/404";
+"~^/restore_.*$" "/404";
+"~^/reset_.*$" "/404";
+"~^/php_editor.*$" "/404";
+"~^/outlinetts.*$" "/404";
+"~^/mgm99th.site.*$" "/404";
+"~^/css_editor.*$" "/404";
+"~^/change_password.*$" "/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/404";
