--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11746,3 +11746,4 @@ default "";
 "~^/doc/math/1974-mathai-figure2-reconstructedsunflowerhead.png.*$" "/doc/math/1974-mathai-figure2-reconstructedsunflowerhead.jpg";
 "~^/doc/reinforcement-learning/model/alphago/2017-silver-figure6-performanceofalphagozerolearningcurvesandbyelocomparison.png.*$" "/doc/reinforcement-learning/model/alphago/2017-silver-figure6-performanceofalphagozerolearningcurvesandbyelocomparison.jpg";
 "~^/doc/psychology/personality/2024-bates-figure1-scatterplotofcrybulliesvsnarcissismmachiavellianism.jpg.*$" "/doc/psychology/personality/narcissism/2024-bates-figure1-scatterplotofcrybulliesvsnarcissismmachiavellianism.jpg";
+"~^/doc/economics/mechanism-design/1998-kremer.pdf.*$" "/doc/economics/mechanism-design/auction/1998-kremer.pdf";
