--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -19135,7 +19135,7 @@
 "~^/genetics.-Thank.*$" "/index#genetics";
 "~^/feeds/all.atom.xml$" "/feed.xml";
 "~^/doc/[b-z].*/eva/1996-newtype-anno-interview$" "/doc/anime/eva/1996-newtype-anno-interview";
-"~^/doc/psychology/animal/1931-kellogg.pdfThe-Ape-and-the-Child;-a-Study-of-Environmental-Influence-Upon-Early-Behavior/$" "";
+"~^/doc/psychology/animal/1931-kellogg.pdfThe.*$" "/doc/psychology/animal/1931-kellogg.pdf";
 "~^/doc/psychiatry/autism/2023-usdepartmentofstste$" "/doc/psychiatry/autism/2023-usdepartmentofstate-byuunearsuicidefoiaresponse.pdf";
 "~^/doc/psychiatry/autism/2023-usdepartmentofstate-byuunearsui$" "/doc/psychiatry/autism/2023-usdepartmentofstate-byuunearsuicidefoiaresponse.pdf";
 "~^/doc/psychiatry/autism/2023-usdepartmentofstate-byuunearsuicid$" "/doc/psychiatry/autism/2023-usdepartmentofstate-byuunearsuicidefoiaresponse.pdf";
@@ -19170,6 +19170,24 @@
 "~^/doc/cs/linkrot/cs/linkrot/cs/linkrot/cs/linkrot/2007-craig\.pdf.*$" "/doc/cs/linkrot/2007-craig.pdf";
 "~^/\$2019$" "/404";
 "~^/doc/zeo/Redshift$" "/zeo/redshift";
+"~^/lorem-heading.*$" "/lorem-header";
+"~^/animesite.fr.*$" "https://animesite.fr/";
+"~^/doc/economics/1995-hom-employeeturnove$" "/doc/economics/1995-hom-employeeturnover.pdf";
+"~^/doc/psychology/personality/1950-horney-neurosisandhumangrowth-ch11-resignationtheappealoffreedom.pdfY$" "/doc/psychology/personality/1950-horney-neurosisandhumangrowth-ch11-resignationtheappealoffreedom.pdf";
+"~^/doc/psychology/2015feddersen\.pdf.*$" "/doc/psychology/2015-feddersen.pdf";
+"~^/doc/genetics/heritable/correlation/2016-hyde.pdf63.*$" "/doc/genetics/heritable/correlation/2016-hyde.pdf";
+"~^/doc%2Fstatistics%2F2022-10-07-khoth-problem14-diagonalizedblockparallelversion-schematicdiagramofevaluationpattern.png$" "/doc/statistics/2022-10-07-khoth-problem14-diagonalizedblockparallelversion-schematicdiagramofevaluationpattern.jpg";
+"~^/doc%2Freinforcement-learning%2Fsafe%2Fclippy%2F2023-08-29-gwern-alignmentchart-paperclip.png$" "/doc/reinforcement-learning/safe/clippy/2023-08-29-gwern-alignmentchart-paperclip.jpg";
+"~^/doc%2Freinforcement-learning%2Fmodel-free%2Foa5%2F2018-mccandlish-openai-howaitrainingscales-gradientnoisescale-summary3-scalevsbatchsize.png$" "/doc/reinforcement-learning/model-free/oa5/2018-mccandlish-openai-howaitrainingscales-gradientnoisescale-summary3-scalevsbatchsize.jpg";
+"~^/doc%2Fpsychology%2Fspaced-repetition%2F2014-05-31-mnemosyne-treadmill-dailyaverage.png$" "/doc/psychology/spaced-repetition/2014-05-31-mnemosyne-treadmill-dailyaverage.jpg";
+"~^/DNB-FAQOu$" "/dnb-faq";
+"~^/doc/darknet-market/2011-11-0$" "/doc/darknet-market/index";
+"~^/doc/statistics/bayes/%C2%BF$" "/doc/statistics/bayes/index";
+"~^/emryo-selection$" "/embryo-selection";
+"~^/static/font/dropcap/Yinit-X.ttf$" "/static/font/dropcap/yinit/Yinit-X.ttf";
+"~^/Survival-Analysis$" "/tags/survival-analysis";
+"~^/get-in-touch.*$" "/me#contact";
+"~^/Contact.*$" "/me#contact";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
@@ -25517,6 +25535,17 @@
 "~^/css_editor.*$" "/404";
 "~^/change_password.*$" "/404";
 "~^/.*/php/controller.php.*$" "/404";
+"~^/dapur/.*$" "/404";
+"~^/[0-9]\.[0-9]-MB$" "/404";
+"~^/label/.*$" "/404";
+"~^/kindEditor/.*$" "/404";
+"~^/ket7.*$" "/404";
+"~^/Inject.*$" "/404";
+"~^/index.js.*$" "/index";
+"~^/client.js.*$" "/404";
+"~^/registration.*$" "/404";
+"~^/Register.*$" "/404";
+"~^/join.*$" "/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/404";
