--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11820,3 +11820,4 @@ default "";
 "~^/doc/traffic/2015-gwern-july-git-history.png.*$" "/doc/traffic/2015-gwern-july-git-history.jpg";
 "~^/doc/technology/1976-stanhill-figure2-flowchartofelementalmassthroughparisianagriculturaleconomy.png.*$" "/doc/technology/1976-stanhill-figure2-flowchartofelementalmassthroughparisianagriculturaleconomy.jpg";
 "~^/doc/fiction/1954-broun.pdf.*$" "/doc/fiction/1919-broun.pdf";
+"~^/doc/psychology/writing/2014-rubin-2-2.pdf.*$" "/doc/psychology/writing/2014-rubin.pdf";
