--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -1016,7 +1016,7 @@ server {
         rewrite ^/metadata/annotations/(?<original>[0-9a-ce-gi-z].*) /metadata/annotation/%2F$original permanent;
         rewrite ^//(?<original>.+)$ /$original permanent;
         rewrite ^/(?<original>[A-Za-z0-9-]+)/$ /$original permanent; # try to deal with the spiders bruteforcing appending '/' to all essays like '/self-decrypting/'
-        rewrite ^/(?<original>[A-Za-z0-9-]+/[a-z0-9-]+)/$ /$original permanent;
+        # rewrite ^/(?<original>[A-Za-z0-9-]+/[a-z0-9-]+)/$ /$original permanent; # BAD creates loops!
 
         # Gitit dot-page → Markdown .md migration:
         rewrite /(?<original>.*)\.page$ /$original.md permanent;
