--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -8728,7 +8728,7 @@
 "~^/no$" "/note/index";
 "~^/income$" "/note/IQ-Income";
 "~^/\?Killing-Rabbits$" "/note/Killing-Rabbits";
-"~^/[Ll]ion.*$" "/note/Lions";
+"~^/[Ll]ion.*$" "/note/lion";
 "~^/-lizardman$" "/note/Lizardman-constant";
 "~^/[Ll]ocal.*$" "/note/Local-optima";
 "~^/[Nn]ash[xX].*" "/notes/Nash";
@@ -10596,8 +10596,8 @@
 "~^/nootropic/tags/experiments$" "/doc/nootropic/quantified-self/index";
 "~^/note/end$" "/note/end-to-end";
 "~^/note/Fermi$" "/note/fermi";
-"~^/note/Lion$" "/note/lions";
-"~^/note/Liza$" "/note/lions";
+"~^/note/Lion$" "/note/lion";
+"~^/note/Liza$" "/note/lion";
 "~^/note/Ramsey$" "/note/ramsey";
 "~^/notes$" "/note/note";
 "~^/note/Scaling-laws$" "/note/scaling";
@@ -12365,7 +12365,7 @@
 "~^/note/regressio$" "/note/regression";
 "~^/note/attentio$" "/note/attention";
 "~^/note/fashio$" "/note/fashion";
-"~^/note/lio$" "/note/lions";
+"~^/note/lio$" "/note/lion";
 "~^/review/cultural-revolutio$" "/review/cultural-revolution";
 "~^/selectio$" "/selection";
 "~^/spaced-repetitio$" "/spaced-repetition";
@@ -14005,7 +14005,7 @@
 "~^/amphetamine$" "/nootropics#adderall";
 "~^/Testosterone$" "/nootropics#testosterone";
 "~^/note/fermi/$" "/note/fermi";
-"~^/note/lion/$" "/note/lions";
+"~^/note/lion/$" "/note/lion";
 "~^/note/regression/$" "/note/regression";
 "~^/note/statistic/$" "/note/statistic";
 "~^/prediction-market/$" "/prediction-market";
@@ -17624,7 +17624,7 @@
 "~^/doc/genetics/sequencing/www/www.ncbi.nlm.nih.gov/29a3cf827c290bdaee6b29597e4b92577e2ca173\.pdf.*$" "/doc/www/www.ncbi.nlm.nih.gov/29a3cf827c290bdaee6b29597e4b92577e2ca173.pdf";
 "~^/note/[0-9]$" "/note/index";
 "~^//gwern.net/index.md$" "/note/index.md";
-"~^/note/Lions.md$" "/note/lions";
+"~^/note/Lions.md$" "/note/lion";
 "~^/robots.txt/$" "/robots.txt";
 "~^/static/rest_framework/css/default.css$" "/static/css/default.css";
 "~^/static/js/darkmode$" "/static/js/dark-mode.js";
@@ -19188,6 +19188,28 @@
 "~^/Survival-Analysis$" "/tags/survival-analysis";
 "~^/get-in-touch.*$" "/me#contact";
 "~^/Contact.*$" "/me#contact";
+"~^/review/gwern.net.*$" "/review/index";
+"~^/narrowing-circle%C2%.*$" "/narrowing-circle";
+"~^/my-account.*$" "/404";
+"~^/doc/sociology/2014-02-25-%C3%B0.*$" "/doc/sociology/2014-02-25-matter-themanwhodestroyedamericasego.html";
+"~^/doc/rotten.com/library/sexual-ethics-in-psychology/$" "/doc/rotten.com/library/sex/sexual-ethics-in-psychology/index.html";
+"~^/doc/rotten.com/library/mad-science/$" "/doc/rotten.com/library/bio/mad-science/index.html";
+"~^/doc/rotten.com/library/elongated-labia/$" "/doc/rotten.com/library/sex/elongated-labia/index.html";
+"~^/doc/genetics/1969-carter.pdf\?utm.*$" "/doc/genetics/heritable/1969-carter.pdf";
+"~^/doc/darknet-market/silk-road/1/3D%25.*$" "/doc/darknet-market/silk-road/1/index";
+"~^/doc/darknet-market/2013-11-JIMyrMW3$" "";
+"~^/doc/ai/nn/transformer/gpt/poetry/--sf.*$" "/doc/ai/nn/transformer/gpt/poetry/index";
+"~^/doc/ai/nn/transformer/gpt/poetry/0,.*$" "/doc/ai/nn/transformer/gpt/poetry/index";
+"~^/DNB20FAQbr.*$" "/dnb-faq";
+"~^/complement\&.*$" "/complement";
+"~^/complexity-vs-ai.md$" "/complexity";
+"~^/doc/liqSun.*$" "/doc/lithium/index";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-light-v-montage-6.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-dropcaps-light-v-montage-6.jpg";
+"~^/doc/anime/eva/newtype100-kaworu-catsketch-prototype.jpg$" "/doc/anime/eva/newtype100-kaworu-catsketch-prototype.png";
+"~^/doc/biology/2000-1$" "/doc/biology/index";
+"~^/doc/4.+$" "/doc/index";
+"~^/miletiangm.*$" "/miletian";
+"~^/note/lions$" "/note/lion";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
