--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -19197,7 +19197,7 @@
 "~^/doc/rotten.com/library/elongated-labia/$" "/doc/rotten.com/library/sex/elongated-labia/index.html";
 "~^/doc/genetics/1969-carter.pdf\?utm.*$" "/doc/genetics/heritable/1969-carter.pdf";
 "~^/doc/darknet-market/silk-road/1/3D%25.*$" "/doc/darknet-market/silk-road/1/index";
-"~^/doc/darknet-market/2013-11-JIMyrMW3$" "";
+"~^/doc/darknet-market/2013-11-JI.*$" "/doc/darknet-market/index";
 "~^/doc/ai/nn/transformer/gpt/poetry/--sf.*$" "/doc/ai/nn/transformer/gpt/poetry/index";
 "~^/doc/ai/nn/transformer/gpt/poetry/0,.*$" "/doc/ai/nn/transformer/gpt/poetry/index";
 "~^/DNB20FAQbr.*$" "/dnb-faq";
@@ -19210,6 +19210,13 @@
 "~^/doc/4.+$" "/doc/index";
 "~^/miletiangm.*$" "/miletian";
 "~^/note/lions$" "/note/lion";
+"~^/.*/\$2023$" "/404";
+"~^/ftp$" "/404";
+"~^/anesthesia$" "/doc/psychology/neuroscience/pain/anesthesia/index";
+"~^/Candy%252520Japan$" "/candy-japan";
+"~^/DNB-F$" "/dnb-faq";
+"~^/doc/econom$" "/doc/economics/index";
+"~^/doc/2012-harrell\.pdf.*$" "/doc/nicotine/2012-harrell.pdf";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
