--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11821,3 +11821,21 @@ default "";
 "~^/doc/technology/1976-stanhill-figure2-flowchartofelementalmassthroughparisianagriculturaleconomy.png.*$" "/doc/technology/1976-stanhill-figure2-flowchartofelementalmassthroughparisianagriculturaleconomy.jpg";
 "~^/doc/fiction/1954-broun.pdf.*$" "/doc/fiction/1919-broun.pdf";
 "~^/doc/psychology/writing/2014-rubin-2-2.pdf.*$" "/doc/psychology/writing/2014-rubin.pdf";
+"~^/doc/fiction/1983-brucepennington-citadeloftheautarch-bookcover.jpg.*$" "/doc/fiction/gene-wolfe/1983-brucepennington-citadeloftheautarch-bookcover.jpg";
+"~^/doc/fiction/1992-02-18-neilgaiman-sandman-issue36-agameofyoupart5-overtheseatothesky-theendoftheland.jpg.*$" "/doc/fiction/fantasy/1992-02-18-neilgaiman-sandman-issue36-agameofyoupart5-overtheseatothesky-theendoftheland.jpg";
+"~^/doc/fiction/1993-gaiman-sandman-thegoldenboy.pdf.*$" "/doc/fiction/fantasy/1993-gaiman-sandman-thegoldenboy.pdf";
+"~^/doc/fiction/2020-gallant.pdf.*$" "/doc/fiction/fantasy/2020-gallant.pdf";
+"~^/doc/fiction/1919-broun.pdf.*$" "/doc/fiction/fantasy/1919-broun.pdf";
+"~^/doc/fiction/2006-atlus.pdf.*$" "/doc/fiction/fantasy/2006-atlus.pdf";
+"~^/doc/fiction/2007-larsen.pdf.*$" "/doc/fiction/fantasy/2007-larsen.pdf";
+"~^/doc/fiction/1926-krzhizhanowsky-quadraturin.html.*$" "/doc/fiction/fantasy/1926-krzhizhanowsky-quadraturin.html";
+"~^/doc/fiction/2016-sanderson.html.*$" "/doc/fiction/fantasy/2016-sanderson.html";
+"~^/doc/fiction/2011-gibson.html.*$" "/doc/fiction/science-fiction/2011-gibson.html";
+"~^/doc/fiction/2011-yvain-fermiparadox.html.*$" "/doc/fiction/science-fiction/2011-yvain-fermiparadox.html";
+"~^/doc/fiction/2011-yvain-taxonomers.html.*$" "/doc/fiction/science-fiction/2011-yvain-taxonomers.html";
+"~^/doc/fiction/2011-yvain-thestoryofemilyandcontrol.html.*$" "/doc/fiction/science-fiction/2011-yvain-thestoryofemilyandcontrol.html";
+"~^/doc/fiction/2012-yvain-thelasttemptationofchrist.html.*$" "/doc/fiction/science-fiction/2012-yvain-thelasttemptationofchrist.html";
+"~^/doc/psychology/vision/2022-palermo.pdf.*$" "/doc/psychology/vision/aphantasia/2022-palermo.pdf";
+"~^/doc/psychology/vision/2018-keogh.pdf.*$" "/doc/psychology/vision/aphantasia/2018-keogh.pdf";
+"~^/doc/psychology/vision/2023-monzel.pdf.*$" "/doc/psychology/vision/aphantasia/2023-monzel.pdf";
+"~^/doc/psychology/2022-woolley.pdf.*$" "/doc/psychology/novelty/2022-woolley.pdf";
