--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -19217,6 +19217,10 @@
 "~^/DNB-F$" "/dnb-faq";
 "~^/doc/econom$" "/doc/economics/index";
 "~^/doc/2012-harrell\.pdf.*$" "/doc/nicotine/2012-harrell.pdf";
+"~^/doc/www/sites.google.com/view/.*$" "/404";
+"~^/static/pattern/.*$" "/404";
+"~^/rumahkp.*$" "/404";
+"~^/metadata/annotation/link-bibliography/%E2%82%BF2015-11-19$" "/404";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
