--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -19221,6 +19221,9 @@
 "~^/static/pattern/.*$" "/404";
 "~^/rumahkp.*$" "/404";
 "~^/metadata/annotation/link-bibliography/%E2%82%BF2015-11-19$" "/404";
+"~^/second$" "/second-life-sentence";
+"~^/second.*life$" "/second-life-sentence";
+"~^/second-.*s$" "/second-life-sentence";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
