--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -19224,6 +19224,204 @@
 "~^/second$" "/second-life-sentence";
 "~^/second.*life$" "/second-life-sentence";
 "~^/second-.*s$" "/second-life-sentence";
+# "~^/2013/12$" "/newsletter/2013/12";
+# "~^/2013/index$" "/newsletter/2013/index";
+# "~^/2014/01$" "/newsletter/2014/01";
+# "~^/2014/02$" "/newsletter/2014/02";
+# "~^/2014/03$" "/newsletter/2014/03";
+# "~^/2014/04$" "/newsletter/2014/04";
+# "~^/2014/05$" "/newsletter/2014/05";
+# "~^/2014/06$" "/newsletter/2014/06";
+# "~^/2014/07$" "/newsletter/2014/07";
+# "~^/2014/08$" "/newsletter/2014/08";
+# "~^/2014/09$" "/newsletter/2014/09";
+# "~^/2014/10$" "/newsletter/2014/10";
+# "~^/2014/11$" "/newsletter/2014/11";
+# "~^/2014/12$" "/newsletter/2014/12";
+# "~^/2014/13$" "/newsletter/2014/13";
+# "~^/2014/index$" "/newsletter/2014/index";
+# "~^/2015/01$" "/newsletter/2015/01";
+# "~^/2015/02$" "/newsletter/2015/02";
+# "~^/2015/03$" "/newsletter/2015/03";
+# "~^/2015/04$" "/newsletter/2015/04";
+# "~^/2015/05$" "/newsletter/2015/05";
+# "~^/2015/06$" "/newsletter/2015/06";
+# "~^/2015/07$" "/newsletter/2015/07";
+# "~^/2015/08$" "/newsletter/2015/08";
+# "~^/2015/09$" "/newsletter/2015/09";
+# "~^/2015/10$" "/newsletter/2015/10";
+# "~^/2015/11$" "/newsletter/2015/11";
+# "~^/2015/12$" "/newsletter/2015/12";
+# "~^/2015/13$" "/newsletter/2015/13";
+# "~^/2015/index$" "/newsletter/2015/index";
+# "~^/2016/01$" "/newsletter/2016/01";
+# "~^/2016/02$" "/newsletter/2016/02";
+# "~^/2016/03$" "/newsletter/2016/03";
+# "~^/2016/04$" "/newsletter/2016/04";
+# "~^/2016/05$" "/newsletter/2016/05";
+# "~^/2016/06$" "/newsletter/2016/06";
+# "~^/2016/07$" "/newsletter/2016/07";
+# "~^/2016/08$" "/newsletter/2016/08";
+# "~^/2016/09$" "/newsletter/2016/09";
+# "~^/2016/10$" "/newsletter/2016/10";
+# "~^/2016/11$" "/newsletter/2016/11";
+# "~^/2016/12$" "/newsletter/2016/12";
+# "~^/2016/13$" "/newsletter/2016/13";
+# "~^/2016/index$" "/newsletter/2016/index";
+# "~^/2017/01$" "/newsletter/2017/01";
+# "~^/2017/02$" "/newsletter/2017/02";
+# "~^/2017/03$" "/newsletter/2017/03";
+# "~^/2017/04$" "/newsletter/2017/04";
+# "~^/2017/05$" "/newsletter/2017/05";
+# "~^/2017/06$" "/newsletter/2017/06";
+# "~^/2017/07$" "/newsletter/2017/07";
+# "~^/2017/08$" "/newsletter/2017/08";
+# "~^/2017/09$" "/newsletter/2017/09";
+# "~^/2017/10$" "/newsletter/2017/10";
+# "~^/2017/11$" "/newsletter/2017/11";
+# "~^/2017/12$" "/newsletter/2017/12";
+# "~^/2017/13$" "/newsletter/2017/13";
+# "~^/2017/index$" "/newsletter/2017/index";
+# "~^/2018/01$" "/newsletter/2018/01";
+# "~^/2018/02$" "/newsletter/2018/02";
+# "~^/2018/03$" "/newsletter/2018/03";
+# "~^/2018/04$" "/newsletter/2018/04";
+# "~^/2018/05$" "/newsletter/2018/05";
+# "~^/2018/06$" "/newsletter/2018/06";
+# "~^/2018/07$" "/newsletter/2018/07";
+# "~^/2018/08$" "/newsletter/2018/08";
+# "~^/2018/09$" "/newsletter/2018/09";
+# "~^/2018/10$" "/newsletter/2018/10";
+# "~^/2018/11$" "/newsletter/2018/11";
+# "~^/2018/12$" "/newsletter/2018/12";
+# "~^/2018/13$" "/newsletter/2018/13";
+# "~^/2018/index$" "/newsletter/2018/index";
+# "~^/2019/01$" "/newsletter/2019/01";
+# "~^/2019/02$" "/newsletter/2019/02";
+# "~^/2019/03$" "/newsletter/2019/03";
+# "~^/2019/04$" "/newsletter/2019/04";
+# "~^/2019/05$" "/newsletter/2019/05";
+# "~^/2019/06$" "/newsletter/2019/06";
+# "~^/2019/07$" "/newsletter/2019/07";
+# "~^/2019/08$" "/newsletter/2019/08";
+# "~^/2019/09$" "/newsletter/2019/09";
+# "~^/2019/10$" "/newsletter/2019/10";
+# "~^/2019/11$" "/newsletter/2019/11";
+# "~^/2019/12$" "/newsletter/2019/12";
+# "~^/2019/13$" "/newsletter/2019/13";
+# "~^/2019/index$" "/newsletter/2019/index";
+# "~^/2020/01$" "/newsletter/2020/01";
+# "~^/2020/02$" "/newsletter/2020/02";
+# "~^/2020/03$" "/newsletter/2020/03";
+# "~^/2020/04$" "/newsletter/2020/04";
+# "~^/2020/05$" "/newsletter/2020/05";
+# "~^/2020/06$" "/newsletter/2020/06";
+# "~^/2020/07$" "/newsletter/2020/07";
+# "~^/2020/08$" "/newsletter/2020/08";
+# "~^/2020/09$" "/newsletter/2020/09";
+# "~^/2020/10$" "/newsletter/2020/10";
+# "~^/2020/11$" "/newsletter/2020/11";
+# "~^/2020/12$" "/newsletter/2020/12";
+# "~^/2020/13$" "/newsletter/2020/13";
+# "~^/2020/index$" "/newsletter/2020/index";
+# "~^/2021/01$" "/newsletter/2021/01";
+# "~^/2021/02$" "/newsletter/2021/02";
+# "~^/2021/03$" "/newsletter/2021/03";
+# "~^/2021/04$" "/newsletter/2021/04";
+# "~^/2021/05$" "/newsletter/2021/05";
+# "~^/2021/06$" "/newsletter/2021/06";
+# "~^/2021/07$" "/newsletter/2021/07";
+# "~^/2021/08$" "/newsletter/2021/08";
+# "~^/2021/09$" "/newsletter/2021/09";
+# "~^/2021/10$" "/newsletter/2021/10";
+# "~^/2021/11$" "/newsletter/2021/11";
+# "~^/2021/12$" "/newsletter/2021/12";
+# "~^/2021/13$" "/newsletter/2021/13";
+# "~^/2021/index$" "/newsletter/2021/index";
+# "~^/2022/01$" "/newsletter/2022/01";
+# "~^/2022/02$" "/newsletter/2022/02";
+# "~^/2022/03$" "/newsletter/2022/03";
+# "~^/2022/04$" "/newsletter/2022/04";
+# "~^/2022/05$" "/newsletter/2022/05";
+# "~^/2022/06$" "/newsletter/2022/06";
+# "~^/2022/07$" "/newsletter/2022/07";
+# "~^/2022/08$" "/newsletter/2022/08";
+# "~^/2022/09$" "/newsletter/2022/09";
+# "~^/2022/10$" "/newsletter/2022/10";
+# "~^/2022/11$" "/newsletter/2022/11";
+# "~^/2022/12$" "/newsletter/2022/12";
+# "~^/2022/13$" "/newsletter/2022/13";
+# "~^/2022/index$" "/newsletter/2022/index";
+# "~^/2023/01$" "/newsletter/2023/01";
+# "~^/2023/02$" "/newsletter/2023/02";
+# "~^/2023/03$" "/newsletter/2023/03";
+# "~^/2023/04$" "/newsletter/2023/04";
+# "~^/2023/05$" "/newsletter/2023/05";
+# "~^/2023/06$" "/newsletter/2023/06";
+# "~^/2023/07$" "/newsletter/2023/07";
+# "~^/2023/08$" "/newsletter/2023/08";
+# "~^/2023/09$" "/newsletter/2023/09";
+# "~^/2023/10$" "/newsletter/2023/10";
+# "~^/2023/11$" "/newsletter/2023/11";
+# "~^/2023/12$" "/newsletter/2023/12";
+# "~^/2023/13$" "/newsletter/2023/13";
+# "~^/2023/index$" "/newsletter/2023/index";
+# "~^/2024/01$" "/newsletter/2024/01";
+# "~^/2024/02$" "/newsletter/2024/02";
+# "~^/2024/03$" "/newsletter/2024/03";
+# "~^/2024/04$" "/newsletter/2024/04";
+# "~^/2024/05$" "/newsletter/2024/05";
+# "~^/2024/06$" "/newsletter/2024/06";
+# "~^/2024/07$" "/newsletter/2024/07";
+# "~^/2024/08$" "/newsletter/2024/08";
+# "~^/2024/09$" "/newsletter/2024/09";
+# "~^/2024/10$" "/newsletter/2024/10";
+# "~^/2024/11$" "/newsletter/2024/11";
+# "~^/2024/12$" "/newsletter/2024/12";
+# "~^/2024/13$" "/newsletter/2024/13";
+# "~^/2024/index$" "/newsletter/2024/index";
+# "~^/2025/01$" "/newsletter/2025/01";
+# "~^/2025/02$" "/newsletter/2025/02";
+# "~^/2025/03$" "/newsletter/2025/03";
+# "~^/2025/04$" "/newsletter/2025/04";
+# "~^/2025/05$" "/newsletter/2025/05";
+# "~^/2025/06$" "/newsletter/2025/06";
+# "~^/2025/07$" "/newsletter/2025/07";
+# "~^/2025/08$" "/newsletter/2025/08";
+# "~^/2025/09$" "/newsletter/2025/09";
+# "~^/2025/10$" "/newsletter/2025/10";
+# "~^/2025/11$" "/newsletter/2025/11";
+# "~^/2025/12$" "/newsletter/2025/12";
+# "~^/2025/13$" "/newsletter/2025/13";
+# "~^/2025/index$" "/newsletter/2025/index";
+# "~^/2026/01$" "/newsletter/2026/01";
+# "~^/2026/02$" "/newsletter/2026/02";
+# "~^/2026/03$" "/newsletter/2026/03";
+# "~^/2026/04$" "/newsletter/2026/04";
+# "~^/2026/05$" "/newsletter/2026/05";
+# "~^/2026/06$" "/newsletter/2026/06";
+# "~^/2026/07$" "/newsletter/2026/07";
+# "~^/2026/08$" "/newsletter/2026/08";
+# "~^/2026/09$" "/newsletter/2026/09";
+# "~^/2026/10$" "/newsletter/2026/10";
+# "~^/2026/11$" "/newsletter/2026/11";
+# "~^/2026/12$" "/newsletter/2026/12";
+# "~^/2026/13$" "/newsletter/2026/13";
+# "~^/2026/index$" "/newsletter/2026/index";
+# "~^/2027/01$" "/newsletter/2027/01";
+# "~^/2027/02$" "/newsletter/2027/02";
+# "~^/2027/03$" "/newsletter/2027/03";
+# "~^/2027/04$" "/newsletter/2027/04";
+# "~^/2027/05$" "/newsletter/2027/05";
+# "~^/2027/06$" "/newsletter/2027/06";
+# "~^/2027/07$" "/newsletter/2027/07";
+# "~^/2027/08$" "/newsletter/2027/08";
+# "~^/2027/09$" "/newsletter/2027/09";
+# "~^/2027/10$" "/newsletter/2027/10";
+# "~^/2027/11$" "/newsletter/2027/11";
+# "~^/2027/12$" "/newsletter/2027/12";
+# "~^/2027/13$" "/newsletter/2027/13";
+# "~^/2027/index$" "/newsletter/2027/index";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
