--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -19422,6 +19422,10 @@
 # "~^/2027/12$" "/newsletter/2027/12";
 # "~^/2027/13$" "/newsletter/2027/13";
 # "~^/2027/index$" "/newsletter/2027/index";
+"~^/creativity.*$" "/creative-benchmark";
+"~^/creative$" "/creative-benchmark";
+"~^/diverse-bench.*$" "/creative-benchmark";
+"~^/diversity-bench.*$" "/creative-benchmark";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
