--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11839,3 +11839,12 @@ default "";
 "~^/doc/psychology/vision/2018-keogh.pdf.*$" "/doc/psychology/vision/aphantasia/2018-keogh.pdf";
 "~^/doc/psychology/vision/2023-monzel.pdf.*$" "/doc/psychology/vision/aphantasia/2023-monzel.pdf";
 "~^/doc/psychology/2022-woolley.pdf.*$" "/doc/psychology/novelty/2022-woolley.pdf";
+"~^/doc/cs/cellular-automaton/2012-lu.pdf.*$" "/doc/design/typography/paper-marbling/2012-lu.pdf";
+"~^/doc/genetics/microbiome/1991-sndyer.pdf.*$" "/doc/genetics/microbiome/1991-snyder.pdf";
+"~^/doc/genetics/microbiome/1963-abrams.pdf.*$" "/doc/genetics/microbiome/germ-free/1963-abrams.pdf";
+"~^/doc/genetics/microbiome/1966-gordon-figure1-longevityadvantageofgermfreemice.png.*$" "/doc/genetics/microbiome/germ-free/1966-gordon-figure1-longevityadvantageofgermfreemice.png";
+"~^/doc/genetics/microbiome/1966-gordon.pdf.*$" "/doc/genetics/microbiome/germ-free/1966-gordon.pdf";
+"~^/doc/genetics/microbiome/1990-snyder.pdf.*$" "/doc/genetics/microbiome/germ-free/1990-snyder.pdf";
+"~^/doc/genetics/microbiome/1991-snyder.pdf.*$" "/doc/genetics/microbiome/germ-free/1991-snyder.pdf";
+"~^/doc/genetics/microbiome/1991-tazume.pdf.*$" "/doc/genetics/microbiome/germ-free/1991-tazume.pdf";
+"~^/doc/genetics/microbiome/2012-kirk.pdf.*$" "/doc/genetics/microbiome/germ-free/2012-kirk.pdf";
