--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -847,7 +847,7 @@ server {
         rewrite ^/tags/(?<first>.*)+(?<second>.*)$ /$first%20$second permanent;
         rewrite ^/newslettter/(?<old>.*)$ /newsletter/$old permanent;
         rewrite ^/newsleter/(?<old>.*)$ /newsletter/$old permanent;
-        rewrite ^/(?<issue>20[0-5][0-9]/[01][0-9]$ /newsletter/$issue permanent;
+        rewrite ^/(?<issue>20[0-5][0-9]/[01][0-9])$ /newsletter/$issue permanent;
         rewrite ^/(?<old>.*)`(?<old2>.*)$ /$old$old2 permanent;
         rewrite ^/(?<old>.*)\.page/index\.html$ /$old.md permanent;
         rewrite ^/(?<old>.*)\.page/$ /$old.md permanent;
