--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -19426,6 +19426,7 @@
 "~^/creative$" "/creative-benchmark";
 "~^/diverse-bench.*$" "/creative-benchmark";
 "~^/diversity-bench.*$" "/creative-benchmark";
+"~^/lorem-april$" "/lorem-april-fools";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/testing-put.*$" "/404";
