--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11848,3 +11848,5 @@ default "";
 "~^/doc/genetics/microbiome/1991-snyder.pdf.*$" "/doc/genetics/microbiome/germ-free/1991-snyder.pdf";
 "~^/doc/genetics/microbiome/1991-tazume.pdf.*$" "/doc/genetics/microbiome/germ-free/1991-tazume.pdf";
 "~^/doc/genetics/microbiome/2012-kirk.pdf.*$" "/doc/genetics/microbiome/germ-free/2012-kirk.pdf";
+"~^/doc/ai/nn/diffusion/midjourney/2024-12-31-gwern-midjourneyv6-kalisantaclaus-childrensbook.png.*$" "/doc/ai/nn/diffusion/midjourney/2024-12-31-gwern-midjourneyv6-kalisantaclaus-childrensbook.jpg";
+"~^/doc/nootropic/2018-canuso.pdf.*$" "/doc/psychedelic/ketamine/2018-canuso.pdf";
