--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -961,6 +961,8 @@ server {
         rewrite ^/tutorial/(?<original>.*)$ /doc/tutorial/$original permanent;
         rewrite ^/vitamin-d/(?<original>.*)$ /doc/vitamin-d/$original permanent;
         rewrite ^/wikipedia/(?<original>.*)$ /doc/wikipedia/$original permanent;
+        rewrite ^/wiki/(?<original>[A-Z0-9].*)$ https://en.wikipedia.org/wiki/$original permanent;
+        rewrite ^/wiki/(?<original>.*_.*)$ https://en.wikipedia.org/wiki/$original permanent;
         rewrite ^/wiki/(?<original>.*)$ /$original permanent;
         rewrite ^/(?<original>.*)\~$ /$original permanent;
         rewrite ^/(?<original>.*)%7E$ /$original permanent;
