--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -25785,6 +25785,15 @@
 "~^/registration.*$" "/404";
 "~^/Register.*$" "/404";
 "~^/join.*$" "/404";
+"~^/metadata/annotation/link-bibliography/\$2014$" "/404";
+"~^/\.mg$" "/404";
+"~^/\.jp2$" "/404";
+"~^/\.istanbul$" "/404";
+"~^/JDdH7J.*$" "/404";
+"~^/\.gl$" "/404";
+"~^/\.fj$" "/404";
+"~^/\.et$" "/404";
+"~^/\.cg$" "/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/404";
