--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11850,3 +11850,7 @@ default "";
 "~^/doc/genetics/microbiome/2012-kirk.pdf.*$" "/doc/genetics/microbiome/germ-free/2012-kirk.pdf";
 "~^/doc/ai/nn/diffusion/midjourney/2024-12-31-gwern-midjourneyv6-kalisantaclaus-childrensbook.png.*$" "/doc/ai/nn/diffusion/midjourney/2024-12-31-gwern-midjourneyv6-kalisantaclaus-childrensbook.jpg";
 "~^/doc/nootropic/2018-canuso.pdf.*$" "/doc/psychedelic/ketamine/2018-canuso.pdf";
+"~^/doc/psychology/2018-01-04-rescuetime-writingoverweek.png.*$" "/doc/psychology/writing/2018-01-04-rescuetime-writingoverweek.png";
+"~^/doc/psychedelic/2021-brett.pdf.*$" "/doc/psychedelic/ketamine/2021-brett.pdf";
+"~^/doc/psychedelic/2021-xiong.pdf.*$" "/doc/psychedelic/ketamine/2021-xiong.pdf";
+"~^/doc/psychedelic/2023-anand.pdf.*$" "/doc/psychedelic/ketamine/2023-anand.pdf";
